fixed row vertical spacing + font weight for h2

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,12 @@
+h2 {
+  font-weight: 600;
+}
+
+// user row styling
 .row > * {
   padding-left: 0;
   padding-right: 0;
+  margin-bottom: 2em;
 }
 
 .userLogo {
@@ -10,14 +16,15 @@
 }
 .userName {
   text-decoration: underline;
-  overflow: hidden;
   white-space: nowrap;
+  margin-right: 3px;
 }
 .userCompany {
   color: #999999;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  margin-right: 20px;
 }
 
 .no-email {
